# seizure_data_processing

./: .gitignore  404.html  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
docs/: README.md  _config.yml
docs/seizure_data_processing_E/: config.md  index.md
docs/seizure_data_processing_E/datasets/: helper_functions.md  index.md  mit_chb.md  tusz.md
docs/seizure_data_processing_E/pre_processing/: ecg.md  eeg.md  features.md  index.md
notebooks/: save_mit_files.ipynb  svm_classifier.ipynb  tusz_example.ipynb
references/: index.html
search/: search_index.json
seizure_data_processing/: __init__.py
seizure_data_processing/classification/: __init__.py  classification.py  mlflow_utils.py  transform.py
seizure_data_processing/datasets/: helper_functions.py  mit_chb.py  seize_it.py  tusz.py
seizure_data_processing/features/: feature_extraction.py  feature_functions.py
seizure_data_processing/post_processing/: __init__.py  post_process.py  scoring.py
seizure_data_processing/pre_processing/: ecg.py  eeg.py  features.py
seizure_data_processing_E/: index.html
seizure_data_processing_E/config/: index.html
seizure_data_processing_E/datasets/: index.html
seizure_data_processing_E/datasets/helper_functions/: index.html
seizure_data_processing_E/datasets/mit_chb/: index.html
seizure_data_processing_E/pre_processing/: index.html
test/datasets/: test_mit_chb.py  test_tusz.py
test/post_processing/: test_post_process.py  test_scoring.py
test/pre_processing/: test_eeg.py  test_features.py
(+4 files in other folders)
