[build-system]
requires = ["flit_core>=3.4",
    "oldest-supported-numpy"]
build-backend = "flit_core.buildapi"

[project]
name = "seizure_data_processing"
version = "0.0.2"
authors = [
    { name="sderooij"},
]
description = "A package to process seizure EEG data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyEDFlib>=0.1.23",
    "scikit_learn>=1.1.2",
    "pandas>=1.3.4",
    "numpy>=1.20.0, <=1.24",
    "scipy>=1.7.1",
    "mne>=0.24.1",
    "primefac>=2.0.12",
    "PyWavelets>=1.1.1",
    "antropy>=0.1.6",
    "pyarrow>=5.0.0",
]

#[project.optional-dependencies]
#test = [
#    "pytest >=6.0",
#]
#mpl = [
#    "matplotlib >=2.0",
#]
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: OS Independent",
#]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"